End of Section 7

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -8,5 +8,10 @@
   "ConnectionStrings": {
     "DefaultConnection": "Data source=datingapp.db"
   },
-  "TokenKey": "super super secret ungessable key super super secret ungessable key super super secret ungessable key super super secret ungessable key"
+  "TokenKey": "super super secret ungessable key super super secret ungessable key super super secret ungessable key super super secret ungessable key",
+  "Kestrel": {
+    "EndpointDefaults": {
+      "Protocols": "Http1"
+    }
+  }
 }
